osac_rust/target/debug/build/graph_builder-7051f94a38b47c9c/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /home/isergeev/Seafile/Ivan Sergeev Postdoc Project/code/mrf-map/osac_rust/target/debug/build/graph_builder-7051f94a38b47c9c/out/probe.rs:2:12
  |
2 | #![feature(maybe_uninit_write_slice)]
  |            ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /home/isergeev/Seafile/Ivan Sergeev Postdoc Project/code/mrf-map/osac_rust/target/debug/build/graph_builder-7051f94a38b47c9c/out/probe.rs:2:12
  |
2 | #![feature(new_uninit)]
  |            ^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /home/isergeev/Seafile/Ivan Sergeev Postdoc Project/code/mrf-map/osac_rust/target/debug/build/graph_builder-7051f94a38b47c9c/out/probe.rs:2:12
  |
2 | #![feature(slice_partition_dedup)]
  |            ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /home/isergeev/Seafile/Ivan Sergeev Postdoc Project/code/mrf-map/osac_rust/target/debug/build/graph_builder-7051f94a38b47c9c/out/probe.rs:2:1
  |
2 | #![feature(doc_cfg)]
  | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0554`.
